# NOWbroadcastly

./: copy_test.py  fb_post_test.py  latest_ids.txt  main.py  pyproject.toml  requirements.txt
keyboards/: groups.py  main_menu.py  monitoring.py  monitoring_keyboards.py  monitoring_menu.py  publish.py  scenario_keyboards.py
routers/: 1 menu_channels.py  channel_signature.py  groups.py  menu_media.py  monitoring_categories.py  monitoring_manual.py  monitoring_menu.py  publish.py  scenario_activate.py  scenario_create.py  scenario_menu.py  scenario_post.py
states/: media_states.py  monitoring_states.py
storage/: channel_signature.json  groups.json  media.json  monitoring_groups.json  scenarios.json
utils/: 1 arch monitoring_launcher.py  download.py  facebook_publisher.py  facebook_utils.py  file_utils.py  instagram_publisher.py  instagram_utils.py  json_storage.py  monitoring_core.py  monitoring_launcher.py  monitoring_utils.py  scheduler.py  telethon_client.py  telethon_fetcher.py
